fixed very minor styling issue with background on needs/offers cards adjusted placement of cancel button in edit form for dashboard, no longer overlaps the div in small screens minor refactoring of dashboard.js and some dashboard views

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -8,6 +8,11 @@ section.org-show {
     width: 81vw;
     margin: auto;
     padding: 5px;
+    div.cancel-btn {
+      position: absolute;
+      right: 11vw;
+
+    }
   }
   .org-edit {
     .org-image {
