--- a/app/assets/stylesheets/needs-offers-cards.scss
+++ b/app/assets/stylesheets/needs-offers-cards.scss
@@ -30,9 +30,7 @@ div.card.needs {
   border: 3px solid orange;
 }
 div.card.needs {
-  .card-content {
-    background-color: #6BA472;
-  }
+  background-color: #6BA472;
   div.card-action {
     background-color: #4B8656;
     height: 30px;
@@ -43,9 +41,7 @@ div.card.needs {
   border: 3px solid #F46176;
 }
 div.card.offers {
-  .card-content {
-    background-color: #3EA4F0;
-  }
+  background-color: #3EA4F0;
   div.card-action {
     background-color: #0D71E1;
     height: 30px;
